XO_Project_UAT/Project--XOGrp--UAT/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccSource__c</fullName>
        <description>Phase 1 National</description>
        <label>Account Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleflora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-prospecting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>Phase 1 National</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency &gt; Agency &gt; Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &gt; Automotive &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Accessories &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Baby Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Bridal Fashion &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Children&apos;s Clothing &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; General Fashion &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Jewelry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Maternity Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance &gt; Finance and Insurance &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral &gt; Floral &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Baby Food &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; General Food &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Wine and Spirits &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Baby Health &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Beauty &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; General Health &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Hospital &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Pharmaceutical &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Baby Gear &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Electronics &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Furnishings &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; General Home &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Home Improvement &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Real Estate &gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Tabletop &gt; Bridal Endemic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountSourceHidden__c</fullName>
        <label>Account Source Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Anniversary_Status__c</fullName>
        <label>Anniversary Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Console_Link__c</fullName>
        <description>Hyperlink to Account record in the Console view</description>
        <formula>HYPERLINK(&apos;/console#%2F&apos; + Id, &apos;Load Account in Console&apos;)</formula>
        <inlineHelpText>This link will open up the current account record in Console. This will only work if you are currently in the Console Application.</inlineHelpText>
        <label>Account Console Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>This is just a field that will stamp the #1 on the record so we can use it in formulas on reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Length__c</fullName>
        <description>This is to give the length of the account name</description>
        <formula>LEN( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Source2__c</fullName>
        <description>SS-5698</description>
        <formula>text(AccountSource)</formula>
        <label>Account Source2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Source_Deprecated__c</fullName>
        <label>Account Sub Source(Deprecated)</label>
        <picklist>
            <controllingField>AccountSource</controllingField>
            <picklistValues>
                <fullName>Apple Brides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Bridal St Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills Bride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowed &amp; Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bride Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bride Wants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Bride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Weds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carats and Cakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EventSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Wedding Shoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey Likes Weddings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Here Comes the Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot_Paid Advertising-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot_Paid Advertising-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Source__c</fullName>
        <globalPicklist>Lead_Sub_Source</globalPicklist>
        <label>Account Sub Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ActiveSubscriptionTCVSummary__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sum of the TCV values of all active Subscription&apos;s belonging to the Account</description>
        <inlineHelpText>Sums up the TCV values of all active Subscription&apos;s belonging to this Account</inlineHelpText>
        <label>Active Subscription TCV Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Hierarchy_Date__c</fullName>
        <label>Active Hierarchy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Hierarchy__c</fullName>
        <label>Active Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Opp_Summary__c</fullName>
        <label>Active Opp Summary</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>contains</operation>
            <value>Prospecting, Qualifying, Developing, Quoting, Closing, Pending Internal Approval, Ready for Echo-Sign, Pending Client Approval, Client Approved, Closed Won, Calculating TCV, Customer Declined, No Customer Response, Pitched, Negotiating, Verbally Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Status_Change_Date__c</fullName>
        <description>SF-1302</description>
        <label>Active Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_Status_Stamp_Date__c</fullName>
        <description>CSP-3044</description>
        <label>Active Status Stamp Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Phase 1 National</description>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number__c</fullName>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amnesty_Promotion_Banner__c</fullName>
        <formula>IF( text(Amnesty_Promotion__c)==&apos;100% Amnesty Eligible&apos;,
            IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N9&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600),
            IF (text(Amnesty_Promotion__c)==&apos;50% Amnesty Eligible&apos;,
            IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N5&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600),
            &apos;&apos;)
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amnesty Promotion Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amnesty_Promotion__c</fullName>
        <label>Amnesty Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>100% Amnesty Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Amnesty Eligible</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <description>Plan to Deprecated for CSP-2731
            The very first contracted service start date or the first contracted service start date that occurs after 1 year of no active services</description>
        <inlineHelpText>The very first contracted service start date or the first contracted service start date that occurs after 1 year of no active services</inlineHelpText>
        <label>Anniversary Date(deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anniversary_Status__c</fullName>
        <description>Identifies whether or not the customer has or has had active services with us
            Plan to Deprecated for CSP-2892</description>
        <formula>IF(
            BLANKVALUE(Last_Contracted_Service_Date__c, DATE(1900,1,1))
            &lt; DATE(YEAR(TODAY()) - 1, MONTH(TODAY()), DAY(TODAY())),
            &quot;New&quot;,
            &quot;Existing&quot;
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New is an account with no active subscriptions in the last year.
            Existing is an account with active subscriptions within the last year.</inlineHelpText>
        <label>Anniversary Status(deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_to_a_Metro__c</fullName>
        <description>Flag to indicate if MetroArea__c field is blank or not</description>
        <formula>NOT(ISBLANK( MetroArea__c ))</formula>
        <label>Associated to a Metro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_as_Local_Lead_Source__c</fullName>
        <description>When looking up a Campaign or an Account as a Lead Source, there are filters based on whether or not the Campaign or Account is available to be a Lead Source. Created by SF-738</description>
        <formula>OR(ISPICKVAL(Type, &apos;Referral&apos;),ISPICKVAL(Type, &apos;Integration&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available as Local Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_BP_Test_Text__c</fullName>
        <description>Textual value of BDR BP Test for Score calculation since the Score cannot handle checkboxes at this time.</description>
        <formula>IF( BDR_BP_test__c = True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDR BP Test Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR_BP_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the Account is &quot;workable&quot; or not.</description>
        <label>BDR BP test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_Test_Score__c</fullName>
        <description>This field is being used as a Score field for the BDR testing that is happening. This field is manual and has no automation around it.
            SS-2986
            Plan to Deprecated for CSP-2731</description>
        <inlineHelpText>This field is being used as a Score field for the BDR testing that is happening. This field is manual and has no automation around it.</inlineHelpText>
        <label>BDR Test Score(deprecated)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Designates between Local and National</description>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IF( Cancel_For_Convenience__c==true,
            IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002bVJt&amp;oid=00D4B0000009aVR&quot;,&quot;Cancel for Convenience&quot;,20,600),
            &apos;&apos;
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the vendor is interested in volunteering to be a beta for XO Group.  Created by SS-3694</description>
        <inlineHelpText>Indicate customers NOT interested in volunteering to be a beta for XO Group. This is how to opt them out</inlineHelpText>
        <label>Beta Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingID__c</fullName>
        <description>Phase 1 National</description>
        <label>Billing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBBS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contract Billing Support Specialist for the customer based on the owning sales representative</description>
        <label>CBSS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>Local_Core_Finance_ARR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_CBBS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBSS_Email_Is_Matched__c</fullName>
        <description>Indicates whether the CBSS email matches ARR user&apos;s email</description>
        <formula>ISBLANK(CBBS__c)  ||  CBSS_Email__c  =  CBBS__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBSS Email Is Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSS_Email__c</fullName>
        <description>The email address that is listed on the user account for the CBSS user</description>
        <label>CBSS Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Name__c</fullName>
        <description>First and Last name concatenated together based on Owners ARR first name and last name</description>
        <formula>Owner.ARR__r.FirstName  &amp; &apos; &apos; &amp;  Owner.ARR__r.LastName</formula>
        <label>CBSS Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Phone__c</fullName>
        <description>The phone number that is listed on the user account for the CBSS user</description>
        <label>CBSS Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_For_Convenience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel For Convenience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <description>When cancelled, the date the vendor cancelled their Concierge contract with us</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancellationNote__c</fullName>
        <description>When cancelled, details on why the vendor cancelled their Concierge contract with us</description>
        <label>Cancellation Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the Account has cancelled their Concierge contract with us</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates customer&apos;s credit card has failed multiple processing attempts</description>
        <label>Card Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasesafeID__c</fullName>
        <description>18-digit unique key for the Account in Salesforce</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the 18 DIgit ID field for Account.</inlineHelpText>
        <label>CasesafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <formula>Primary_Category__r.Category_Code__c</formula>
        <label>Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <description>Text representation of the group the Account&apos;s Primary Category is associated with</description>
        <formula>text(Primary_Category__r.Category_Group__c)</formula>
        <label>Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Back_Balance__c</fullName>
        <description>This field is used to track any balance that has been written off for the customer.</description>
        <label>Write-off Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckParentAccount__c</fullName>
        <description>Indicates whether this Account has a Parent or not</description>
        <formula>ISBLANK(Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckParentAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConciergePrgQua__c</fullName>
        <description>Identifies where in the concierge sales process the vendor is</description>
        <label>Concierge program qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified from Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified for Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConciergeProgramStartDate__c</fullName>
        <label>Concierge Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConciergeState__c</fullName>
        <description>Phase 1</description>
        <label>Concierge State</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhode Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConciergeStatus__c</fullName>
        <description>This is the status of Concierge Opportunity related to this Account except under the following two cases
            1. when the account has been cancelled from the Concierge Program
            2. when the account is on Hold from the Concierge Program</description>
        <formula>&quot;1&quot;</formula>
        <label>Concierge Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Account_Owner_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concierge Account Owner Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concierge_On_Hold_Until__c</fullName>
        <description>Date the venue can start being included in the recommendations again</description>
        <inlineHelpText>The Concierge Venue will be On Hold from the venue search until this date passes.</inlineHelpText>
        <label>On Hold Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concierge_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating the venue should not be included in recommendations for a period of time</description>
        <inlineHelpText>Check this box if the concierge venue needs to be on hold from getting recommendations in the venue search tab.</inlineHelpText>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierge_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity that represents the winning contract for Concierge services.</description>
        <label>Concierge Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You must choose a Concierge Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Opp Concierge</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Venues in Program</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concierge_Owner__c</fullName>
        <description>This field is determining the concierge owner based on the concierge account owner override and the concierge opportunity owner.</description>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Rate__c</fullName>
        <description>Contracted % we earn for Concierge transactions</description>
        <label>Concierge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Concierge_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if this Account is a Concierge Vendor</inlineHelpText>
        <label>Concierge Vendor</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>